--- a/check.html
+++ b/check.html
@@ -6,12 +6,15 @@
 <!--[if IE 8]>
 <html class="ie8 ie" lang="ru" dir="ltr"> <![endif]-->
 <!--[if gt IE 8]> <!-->
-<html lang="ru" dir="ltr">
+<html lang="ru" dir="ltr" itemscope itemtype="http://schema.org/Thing">
     <!--<![endif]-->
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+        <meta itemprop="name" content="RE:Store Заголовок страницы">
+        <meta itemprop="description" content="Описание содержимого">
+        <meta itemprop="image" content="images/logo.png">
         <title>Weiss - swicc staic theme</title>
         <link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
         <script src="js/jquery-1.7.2.min.js" type="text/javascript" charset="utf-8"></script>
@@ -40,8 +43,7 @@
             });
         </script>
     </head>
-    <body class="sidebar-second">
-        <!--[if lt IE 7]> <div style=' clear: both; height: 59px; padding:0 0 0 15px; position: relative;'> <a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode"><img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0016_russian.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today." /></a></div> <![endif]-->
+    <body class="sidebar-second"> 
         <div id="main-container">
             <div id="main-inner" class="clearfix">
                 <header role="banner" id="header">
@@ -579,5 +581,6 @@
             </div>
         </footer>
         <!-- /#footer -->
+        <!--[if lt IE 7]> <div style='height: 59px; padding:0 0 0 15px; position: absolute; top: 0; z-index: 9999;'> <a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode"><img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0016_russian.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today." /></a></div> <![endif]-->
     </body>
 </html>
