remove sass folder in sass

--- a/check.html
+++ b/check.html
@@ -12,7 +12,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-        <meta itemprop="name" content="RE:Store Заголовок страницы">
+        <meta itemprop="name" content="Заголовок страницы">
         <meta itemprop="description" content="Описание содержимого">
         <meta itemprop="image" content="images/logo.png">
         <title>Weiss - swicc staic theme</title>
