some fixes. grid implementation

--- a/check.html
+++ b/check.html
@@ -6,7 +6,7 @@
 <!--[if IE 8]>
 <html class="ie8 ie" lang="ru" dir="ltr"> <![endif]-->
 <!--[if gt IE 8]> <!-->
-<html lang="ru" dir="ltr" itemscope itemtype="http://schema.org/Thing">
+<html lang="ru" dir="ltr" itemscope itemtype="http://schema.org/WebPage">
     <!--<![endif]-->
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -18,10 +18,11 @@
         <title>Weiss - swicc staic theme</title>
         <link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
         <script src="js/jquery-1.7.2.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="js/jquery.placeholder.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/scripts.js" type="text/javascript" charset="utf-8"></script>
         <!--[if lt IE 9]>
         <link href="css/ie-old.css" rel="stylesheet" type="text/css" />
-        <script type="text/javascript" charset="utf-8" src="js/html5.js"></script>
+        <script type="text/javascript" charset="utf-8" src="js/html5shiv.js"></script>
         <![endif]-->
         <script type="text/javascript" charset="utf-8">
             $(document).ready(function() {
@@ -433,13 +434,13 @@
                                 Checkbox
                                 <label>
                                     <input type="checkbox" name="checkbox1" value="ch1" checked="checked" />
-                                    Radio 1 (checked) </label>
+                                    Check 1 (checked) </label>
                                 <label>
                                     <input type="checkbox" name="checkbox2" value="ch2" disabled="disabled" />
-                                    Radio 2 (disabled) </label>
+                                    Check 2 (disabled) </label>
                                 <label>
                                     <input type="checkbox" name="checkbox3" value="ch3" />
-                                    Radio 3 </label>
+                                    Check 3 </label>
                             </div>
                             <div class="form-row">
                                 <label for="textarea">Textarea</label>
