microdata changed back

--- a/check.html
+++ b/check.html
@@ -6,7 +6,7 @@
 <!--[if IE 8]>
 <html class="ie8 ie" lang="ru" dir="ltr"> <![endif]-->
 <!--[if gt IE 8]> <!-->
-<html lang="ru" dir="ltr" itemscope itemtype="http://schema.org/WebPage">
+<html lang="ru" dir="ltr" itemscope itemtype="http://schema.org/Thing">
     <!--<![endif]-->
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
