clearfix, ir changed, ignore fix

--- a/check.html
+++ b/check.html
@@ -160,7 +160,7 @@
         tag (<code>&lt;big&gt;</code>,<code> &lt;small&gt;</code>) example
     </li>
     <li>a <b>bold</b> and <strong>strong</strong> tag (<code>&lt;b&gt;</code>, <code>&lt;strong&gt;</code>) example</li>
-    <li>an <acronym>acronym</acronym> and <abbr>abbreviation</abbr> tag (<code>&lt;acronym&gt;</code>, <code>&lt;abbr&gt;</code>)
+    <li>an <abbr>abbreviation</abbr> tag (<code>&lt;abbr&gt;</code>)
         example
     </li>
     <li>a <cite>cite</cite> and <q>quote</q> tag (<code>&lt;cite&gt;</code>, <code>&lt;q&gt;</code> ) example</li>
