elements removed on some classes

--- a/check.html
+++ b/check.html
@@ -80,7 +80,7 @@
                                     <a href="#" id="twocolumn-f">2 columns: sidebar-first</a>
                                 </li>
                                 <li>
-                                    <a href="#" id="twocolumn-s" class="active">2 columns: sidebar-second</a>
+                                    <a href="#" id="twocolumn-s">2 columns: sidebar-second</a>
                                 </li>
                                 <li>
                                     <a href="#" id="threecolumn">3 columns</a>
