--- a/check.html
+++ b/check.html
@@ -8,7 +8,7 @@
 <!--[if (IE 8)&(!IEMobile)]>
 <html class="ie8 ie6-8" lang="ru" dir="ltr"><![endif]-->
 <!--[if (gte IE 9)|(gt IEMobile 7)]><!-->
-<html lang="ru" dir="ltr" itemscope itemtype="http://schema.org/Thing">
+<html lang="ru" dir="ltr" itemscope itemtype="http://schema.org/Thing" xmlns:og="http://ogp.me/ns#">
     <!--<![endif]-->
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -17,6 +17,9 @@
         <meta itemprop="name" content="Заголовок страницы">
         <meta itemprop="description" content="Описание содержимого">
         <meta itemprop="image" content="images/logo.png">
+        <meta property="og:title" content="Заголовок страницы" />
+        <meta property="og:description" content="Описание содержимого" />
+        <meta property="og:image" content="images/basel-logo.png" />
         <title>Weiss - swicc staic theme</title>
         <link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
         <script src="js/jquery-1.7.2.min.js" type="text/javascript" charset="utf-8"></script>
