foundation select box added

--- a/check.html
+++ b/check.html
@@ -23,6 +23,7 @@
         <title>Weiss - swicc staic theme</title>
         <link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
         <script src="js/jquery-1.7.2.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="js/jquery.customforms.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/scripts.js" type="text/javascript" charset="utf-8"></script>
         <!--[if lt IE 9]>
         <link href="css/ie-old.css" rel="stylesheet" type="text/css"/>
@@ -540,7 +541,7 @@ _body.appendChild(_coverElement);
                                 </div>
                             </fieldset>
                         </form>
-                        <form class="form form_order-submit" action="post" method="get" accept-charset="utf-8">
+                        <form class="form form_order-submit custom" action="post" method="get" accept-charset="utf-8">
                             <div class="form__row">
                                 <label for="name">Фамилия, Имя, Отчество</label>
                                 <input type="text" id="name" name="name" required/>
