--- a/check.html
+++ b/check.html
@@ -22,7 +22,8 @@
         <meta property="og:image" content="images/basel-logo.png" />
         <title>Weiss - swicc staic theme</title>
         <link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
-        <script src="js/jquery-1.7.2.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
         <script src="js/jquery.customforms.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/scripts.js" type="text/javascript" charset="utf-8"></script>
         <!--[if lt IE 9]>
