comments in check.html fixed

--- a/check.html
+++ b/check.html
@@ -530,7 +530,7 @@ _body.appendChild(_coverElement);
 								<div class="form__row">
 									<label for="log-name">Введите ваш логин</label>
 									<input type="text" id="log-name" name="name" placeholder="placeholder login"/>
-								</div>
+								</div>Ы
 								<div class="form__row">
 									<input id="password" name="password" required="required" type="password" placeholder="eg. X8df!90EO"/>
 								</div>
@@ -615,9 +615,9 @@ _body.appendChild(_coverElement);
 							<input type="hidden" name="post_back" value="1"/>
 						</form>
 					</div>
-					<!-- /#content -->
+					<!-- /.region-main__content -->
 				</div>
-				<!-- /#main-->
+				<!-- /.region-main-->
 				<!-- .region-aside_first -->
 				<div class="region-aside region-aside_first weiss-cf">
 					<aside role="complementary">
@@ -726,10 +726,10 @@ _body.appendChild(_coverElement);
 					</div>
 				</div>
 			</div>
-			<!-- /#main-inner -->
+			<!-- /.l-page__inner -->
 		</div>
-		<!-- /#main-container -->
-		<!-- #footer -->
+		<!-- /.l-page -->
+		<!-- .region-footer -->
 		<div class="region-footer l-global-footer">
 			<footer role="contentinfo">
 				<div class="weiss-aux">
@@ -747,7 +747,7 @@ _body.appendChild(_coverElement);
 				</div>
 			</footer>
 		</div>
-		<!-- /#footer -->
+		<!-- /.region-footer -->
 		<!--[if lt IE 7]>
 		<div style='height: 59px; padding:0 0 0 15px; position: absolute; top: 0; z-index: 9999;'><a
 		href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode"><img
