--- a/check.html
+++ b/check.html
@@ -20,7 +20,7 @@
 		<meta property="og:title" content="Заголовок страницы" />
 		<meta property="og:description" content="Описание содержимого" />
 		<meta property="og:image" content="images/basel-logo.png" />
-		<title>Weiss - swicc staic theme</title>
+		<title>Weiss - swicc static theme</title>
 		<link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 		<script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
