weiss rename. block added

--- a/blocks/tabs/default.html
+++ b/blocks/tabs/default.html
@@ -25,8 +25,8 @@
 	</head>
 	<body>
 		<div class="l-page">
-			<div class="l-page__inner weiss-cf">
-				<div class="region-main weiss-cf" role="main">
+			<div class="l-page__inner i-clfx">
+				<div class="region-main i-clfx" role="main">
 					<div class="region-main__content">
 						<h1>Заголовок 1</h1>
 						<div class="content-tabs">
