--- a/check.html
+++ b/check.html
@@ -63,7 +63,7 @@
 	</head>
 	<body>
 		<div class="l-page">
-			<div class="l-page__inner weiss-cf">
+			<div class="l-page__inner i-clfx">
 				<div class="region-header l-global-header">
 					<header role="banner">
 						<div class="l-global-header__left">
@@ -100,7 +100,7 @@
 					</header>
 				</div>
 				<!-- /.region-header -->
-				<div class="region-main weiss-cf" role="main">
+				<div class="region-main i-clfx" role="main">
 					<div class="breadcrumb" itemscope itemtype="http://data-vocabulary.org/Breadcrumb">
 						<a href="#" itemprop="url"><span itemprop="title">Главная</span></a> →
 						Typography
@@ -134,19 +134,23 @@
 						<p>
 							A common form of lorem ipsum text reads as follows:
 						</p>
-						<blockquote>
-							<p>
-								Lorem ipsum dolor sit amet, <q>текст заключенный в ковычки</q> consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut
-								labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-								laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-								voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-								non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-							</p>
-							<p>
-								Цитируется по:<cite>http://www.wikipedia.org</cite>
-							</p>
-						</blockquote>
+						<figure>
+							<blockquote>
+								<p>
+									Lorem ipsum dolor sit amet, <q>текст заключенный в ковычки</q> consectetur adipisicing elit, sed do eiusmod
+									tempor incididunt ut
+									labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+									laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+									voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+									non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+								</p>
+							</blockquote>
+							<figcaption>
+								<p>
+									Цитируется по:<cite>http://www.wikipedia.org</cite>
+								</p>
+							</figcaption>
+						</figure>
 						<p>
 							Many variations on the standard lorem ipsum text exist; some with little resemblance to the
 							original. There are versions that have additional letters — such as k, w, and z — that were uncommon
@@ -156,8 +160,7 @@
 						<hr>
 						<ol>
 							<li>
-								<a href="example.com" title="Link">A Link</a> | <a href="http://google.com" title="Link visited">Link
-								visited</a>
+								<a href="example.com">A Link</a> | <a href="http://google.com">Link	visited</a>
 							</li>
 							<li>
 								<del>Deleted</del>
@@ -532,7 +535,7 @@ _body.appendChild(_coverElement);
 									<input type="text" id="log-name" name="name" placeholder="placeholder login"/>
 								</div>Ы
 								<div class="form__row">
-									<input id="password" name="password" required="required" type="password" placeholder="eg. X8df!90EO"/>
+									<input id="password" name="password" required="required" type="password" placeholder="eg. X8df!90EO" />
 								</div>
 								<div class="form__row">
 									<input type="button" value="Button"/>
@@ -619,7 +622,7 @@ _body.appendChild(_coverElement);
 				</div>
 				<!-- /.region-main-->
 				<!-- .region-aside_first -->
-				<div class="region-aside region-aside_first weiss-cf">
+				<div class="region-aside region-aside_first i-clfx">
 					<aside role="complementary">
 						<p>
 							SidebarFirst Block
@@ -628,7 +631,7 @@ _body.appendChild(_coverElement);
 				</div>
 				<!-- /.region-aside_first -->
 				<!-- .region-aside_second -->
-				<div class="region-aside region-aside_second weiss-cf">
+				<div class="region-aside region-aside_second i-clfx">
 					<aside role="complementary">
 						<p>
 							SidebarSecond Block
@@ -643,7 +646,6 @@ _body.appendChild(_coverElement);
 								overflow: hidden;
 								clear: both;
 							}
-
 							.region-undercontent [class*="gr-cell_sp"] {
 								background-color: #EEE;
 								text-align: center;
@@ -732,7 +734,7 @@ _body.appendChild(_coverElement);
 		<!-- .region-footer -->
 		<div class="region-footer l-global-footer">
 			<footer role="contentinfo">
-				<div class="weiss-aux">
+				<div class="i-aux">
 					<div class="l-global-footer__left">
 						<p class="copy">
 							Weiss <br />
