horiz menu added. refactoring. minor fixes

--- a/blocks/menu_horiz/default.html
+++ b/blocks/menu_horiz/default.html
@@ -27,19 +27,37 @@
 			<div class="l-main-aux__inner i-clfx">
 				<div class="region-main i-clfx" role="main">
 					<div class="region-main__content">
-						<h1>Составная кнопка</h1>
+						<h1>Заголовок 1</h1>
 
-						<a href="#" class="btn-3el btn-3el_prim btn-3el_prim_green">
-							<i class="btn-3el__l-s"></i>
-							<span class="btn-3el__mid">3 elem btn primary</span>
-							<i class="btn-3el__r-s"></i>
-						</a>
-
-						<span class="btn-3el btn-3el_sec btn-3el_sec_green">
-							<i class="btn-3el__l-s"></i>
-							<input type="submit" value="3 elem btn secondary" class="btn-3el__mid" />
-							<i class="btn-3el__r-s"></i>
-						</span>
+						<div class="g-nav">
+							<nav>
+								<ul class="g-nav__inner" role="navigation">
+									<li class="g-nav__item">
+										<a href="#" class="g-nav__ln">Элемент_1</a>
+									</li>
+									<li class="g-nav__item">
+										<a href="#" class="g-nav__ln">Элемент_2</a>
+										<ul class="g-nav__submenu">
+											<li class="g-nav__submenu__item">
+												<a href="#" class="g-nav__submenu__ln">Суб-элемент_1</a>
+											</li>
+											<li class="g-nav__submenu__item">
+												<a href="#" class="g-nav__submenu__ln">Суб-элемент_2</a>
+											</li>
+										</ul>
+									</li>
+									<li class="g-nav__item">
+										<a href="#" class="g-nav__ln">Элемент_3</a>
+									</li>
+									<li class="g-nav__item g-nav__item_active">
+										<a href="#" class="g-nav__ln">Элемент_4</a>
+									</li>
+									<li class="g-nav__item g-nav__item_last">
+										<a href="#" class="g-nav__ln">Элемент_5</a>
+									</li>
+								</ul>
+							</nav>
+						</div>
 
 					</div>
 					<!-- /.region-main__content -->
