--- a/blocks/tabs/default.html
+++ b/blocks/tabs/default.html
@@ -24,8 +24,8 @@
 		<![endif]-->
 	</head>
 	<body>
-		<div class="l-page">
-			<div class="l-page__inner i-clfx">
+		<div class="l-main-aux">
+			<div class="l-main-aux__inner i-clfx">
 				<div class="region-main i-clfx" role="main">
 					<div class="region-main__content">
 						<h1>Заголовок 1</h1>
@@ -79,8 +79,8 @@
 				</div>
 				<!-- /.region-main-->
 			</div>
-			<!-- /.l-page__inner -->
+			<!-- /.l-main-aux__inner -->
 		</div>
-		<!-- /.l-page -->
+		<!-- /.l-main-aux -->
 	</body>
 </html>
