--- a/check.html
+++ b/check.html
@@ -62,8 +62,8 @@
 		</script>
 	</head>
 	<body>
-		<div class="l-page">
-			<div class="l-page__inner i-clfx">
+		<div class="l-main-aux">
+			<div class="l-main-aux__inner i-clfx">
 				<div class="region-header l-global-header">
 					<header role="banner">
 						<div class="l-global-header__left">
@@ -76,7 +76,7 @@
 							<span class="site-slogan">Site slogan</span>
 							</a> -->
 						</div>
-						<div class="l-global-header__left">
+						<div class="l-global-header__right">
 							<a href="mailto:weiss@mail.com">weiss@mail.com</a>
 						</div>
 						<div class="global-nav">
@@ -728,9 +728,9 @@ _body.appendChild(_coverElement);
 					</div>
 				</div>
 			</div>
-			<!-- /.l-page__inner -->
+			<!-- /.l-main-aux__inner -->
 		</div>
-		<!-- /.l-page -->
+		<!-- /.l-main-aux -->
 		<!-- .region-footer -->
 		<div class="region-footer l-global-footer">
 			<footer role="contentinfo">
