--- a/blocks/modal/default.html
+++ b/blocks/modal/default.html
@@ -24,32 +24,79 @@
 		<![endif]-->
 	</head>
 	<body>
-		<div class="l-page">
-			<div class="l-page__inner i-clfx">
+		<div class="l-main-aux">
+			<div class="l-main-aux__inner i-clfx">
 				<div class="region-main i-clfx" role="main">
 					<div class="region-main__content">
 						<h1>Заголовок 1</h1>
-						<a href="#" class="js-modal-open">Модальное окно</a>
+						<a href="#" class="js-modal-open" data-modal-rel="modal1">Модальное окно 1</a>
+						<a href="#" class="js-modal-open" data-modal-rel="modal2">Модальное окно 2</a>
+						<a href="#" class="js-modal-open" data-modal-rel="modal3">Модальное окно 3</a>
 
 						<div class="modal js-modal">
 							<div class="modal__bg js-modal-close"></div>
 							<div class="modal__box">
 								<div class="modal__box__inner">
 									<div class="modal__content">
-										<h2 class="modal__title">Заголовок модального окна</h2>
-										<p>
-											Складчатая структура Альп создана в основном движениями альпийского возраста. Наиболее высокая —
-											осевая зона Альп сложена древними кристаллическими (гнейсы, слюдяные сланцы) и метаморфическими
-											(кварцево-филлитовые сланцы) породами, отличается широким распространением горно-ледникового рельефа
-											и современного оледенения. Общая площадь ледников свыше 4 000 км², всего около 1 200 ледников,
-											крупнейшие — Алеч и Горнер. Ледники и вечные снега снижаются до 2 500—3 200 метров. К северу, западу
-											и югу от осевой зоны простираются зоны известняков и доломитов мезозоя и более молодые флишевые и
-											молассовые формации Предальп со среднегорным и низкогорным рельефом.
-										</p>
 									</div>
 									<span class="modal__close-btn js-modal-close" role="button" title="Закрыть окно">×</span>
 								</div>
 							</div>
+						</div>
+
+						<div class="modal-content" id="modal1">
+							<h2 class="modal__title">Заголовок модального окна 1</h2>
+							<p>
+								Складчатая структура Альп создана в основном движениями альпийского возраста. Наиболее высокая —
+								осевая зона Альп сложена древними кристаллическими (гнейсы, слюдяные сланцы) и метаморфическими
+								(кварцево-филлитовые сланцы) породами, отличается широким распространением горно-ледникового рельефа
+								и современного оледенения. Общая площадь ледников свыше 4 000 км², всего около 1 200 ледников,
+								крупнейшие — Алеч и Горнер. Ледники и вечные снега снижаются до 2 500—3 200 метров. К северу, западу
+								и югу от осевой зоны простираются зоны известняков и доломитов мезозоя и более молодые флишевые и
+								молассовые формации Предальп со среднегорным и низкогорным рельефом.
+							</p>
+						</div>
+						<div class="modal-content" id="modal2">
+							<h2 class="modal__title">Заголовок модального окна 2</h2>
+							<p>
+								Складчатая структура Альп создана в основном движениями альпийского возраста. Наиболее высокая —
+								осевая зона Альп сложена древними кристаллическими (гнейсы, слюдяные сланцы) и метаморфическими
+								(кварцево-филлитовые сланцы) породами, отличается широким распространением горно-ледникового рельефа
+								и современного оледенения. Общая площадь ледников свыше 4 000 км², всего около 1 200 ледников,
+								крупнейшие — Алеч и Горнер. Ледники и вечные снега снижаются до 2 500—3 200 метров. К северу, западу
+								и югу от осевой зоны простираются зоны известняков и доломитов мезозоя и более молодые флишевые и
+								молассовые формации Предальп со среднегорным и низкогорным рельефом.
+							</p>
+						</div>
+						<div class="modal-content" id="modal3">
+							<h2 class="modal__title">Заголовок модального окна 3</h2>
+							<p>
+								Складчатая структура Альп создана в основном движениями альпийского возраста. Наиболее высокая —
+								осевая зона Альп сложена древними кристаллическими (гнейсы, слюдяные сланцы) и метаморфическими
+								(кварцево-филлитовые сланцы) породами, отличается широким распространением горно-ледникового рельефа
+								и современного оледенения. Общая площадь ледников свыше 4 000 км², всего около 1 200 ледников,
+								крупнейшие — Алеч и Горнер. Ледники и вечные снега снижаются до 2 500—3 200 метров. К северу, западу
+								и югу от осевой зоны простираются зоны известняков и доломитов мезозоя и более молодые флишевые и
+								молассовые формации Предальп со среднегорным и низкогорным рельефом.
+							</p>
+							<p>
+								Складчатая структура Альп создана в основном движениями альпийского возраста. Наиболее высокая —
+								осевая зона Альп сложена древними кристаллическими (гнейсы, слюдяные сланцы) и метаморфическими
+								(кварцево-филлитовые сланцы) породами, отличается широким распространением горно-ледникового рельефа
+								и современного оледенения. Общая площадь ледников свыше 4 000 км², всего около 1 200 ледников,
+								крупнейшие — Алеч и Горнер. Ледники и вечные снега снижаются до 2 500—3 200 метров. К северу, западу
+								и югу от осевой зоны простираются зоны известняков и доломитов мезозоя и более молодые флишевые и
+								молассовые формации Предальп со среднегорным и низкогорным рельефом.
+							</p>
+							<p>
+								Складчатая структура Альп создана в основном движениями альпийского возраста. Наиболее высокая —
+								осевая зона Альп сложена древними кристаллическими (гнейсы, слюдяные сланцы) и метаморфическими
+								(кварцево-филлитовые сланцы) породами, отличается широким распространением горно-ледникового рельефа
+								и современного оледенения. Общая площадь ледников свыше 4 000 км², всего около 1 200 ледников,
+								крупнейшие — Алеч и Горнер. Ледники и вечные снега снижаются до 2 500—3 200 метров. К северу, западу
+								и югу от осевой зоны простираются зоны известняков и доломитов мезозоя и более молодые флишевые и
+								молассовые формации Предальп со среднегорным и низкогорным рельефом.
+							</p>
 						</div>
 
 					</div>
@@ -57,8 +104,8 @@
 				</div>
 				<!-- /.region-main-->
 			</div>
-			<!-- /.l-page__inner -->
+			<!-- /.l-main-aux__inner -->
 		</div>
-		<!-- /.l-page -->
+		<!-- /.l-main-aux -->
 	</body>
 </html>
