forms impro, tables added, minor fixes

--- a/blocks/modal/default.html
+++ b/blocks/modal/default.html
@@ -33,16 +33,6 @@
 						<a href="#" class="js-modal-open" data-modal-rel="modal2">Модальное окно 2</a>
 						<a href="#" class="js-modal-open" data-modal-rel="modal3">Модальное окно 3</a>
 
-						<div class="modal js-modal">
-							<div class="modal__bg js-modal-close"></div>
-							<div class="modal__box">
-								<div class="modal__box__inner">
-									<div class="modal__content">
-									</div>
-									<span class="modal__close-btn js-modal-close" role="button" title="Закрыть окно">×</span>
-								</div>
-							</div>
-						</div>
 
 						<div class="modal-content" id="modal1">
 							<h2 class="modal__title">Заголовок модального окна 1</h2>
@@ -107,5 +97,15 @@
 			<!-- /.l-main-aux__inner -->
 		</div>
 		<!-- /.l-main-aux -->
+		<div class="modal js-modal">
+			<div class="modal__bg js-modal-close"></div>
+			<div class="modal__window">
+				<div class="modal__window__inner">
+					<div class="modal__content">
+					</div>
+					<span class="modal__close-btn js-modal-close" role="button" title="Закрыть окно">×</span>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
