content tab script fixed, changed modal script

--- a/blocks/modal/default.html
+++ b/blocks/modal/default.html
@@ -29,9 +29,9 @@
 				<div class="region-main i-clfx" role="main">
 					<div class="region-main__content">
 						<h1>Заголовок 1</h1>
-						<a href="#" class="js-modal-open" data-modal-rel="modal1">Модальное окно 1</a>
-						<a href="#" class="js-modal-open" data-modal-rel="modal2">Модальное окно 2</a>
-						<a href="#" class="js-modal-open" data-modal-rel="modal3">Модальное окно 3</a>
+						<a href="#modal1" class="js-modal-open">Модальное окно 1</a>
+						<a href="#modal2" class="js-modal-open">Модальное окно 2</a>
+						<a href="#modal3" class="js-modal-open">Модальное окно 3</a>
 
 
 						<div class="modal-content" id="modal1">
