--- a/blocks/tabs/default.html
+++ b/blocks/tabs/default.html
@@ -30,7 +30,7 @@
 					<div class="region-main__content">
 						<h1>Заголовок 1</h1>
 						<div class="content-tabs">
-							<div class="content-tabs__nav">
+							<div class="content-tabs__nav js-tab-ln-wr">
 								<ul class="content-tabs__nav__inner">
 									<li><a href="#tab1" class="content-tabs__nav__ln js-tab-ln">tab1</a></li>
 									<li><a href="#tab2" class="content-tabs__nav__ln js-tab-ln">tab2</a></li>
