--- a/check.html
+++ b/check.html
@@ -24,7 +24,7 @@
 		<link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
 		<script src="js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/jquery.customforms.js" type="text/javascript" charset="utf-8"></script>
-		<script src="js/scripts.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/main.js" type="text/javascript" charset="utf-8"></script>
 		<!--[if lt IE 9]>
 		<link href="css/ie-old.css" rel="stylesheet" type="text/css"/>
 		<script type="text/javascript" charset="utf-8" src="js/html5shiv.js"></script>
@@ -268,7 +268,6 @@
 								</code>
 								) example
 							</li>
-           							</li>
 							<li>
 								a <sub>subscript</sub> and <sup>superscript</sup> tag (
 								<code>
