--- a/blocks/forms/default.html
+++ b/blocks/forms/default.html
@@ -18,7 +18,7 @@
 		<link href="../../css/style.css" rel="stylesheet" type="text/css" media="all"/>
 		<script src="../../js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/jquery.customforms.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../js/scripts.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/main.js" type="text/javascript" charset="utf-8"></script>
 		<!--[if lt IE 9]>
 		<link href="../../css/ie-old.css" rel="stylesheet" type="text/css"/>
 		<script type="text/javascript" charset="utf-8" src="../../js/html5shiv.js"></script>
