form markup changed

--- a/blocks/menu_horiz/default.html
+++ b/blocks/menu_horiz/default.html
@@ -30,8 +30,8 @@
 						<h1>Заголовок 1</h1>
 
 						<div class="g-nav">
-							<nav>
-								<ul class="g-nav__inner" role="navigation">
+							<nav role="navigation">
+								<ul class="g-nav__inner">
 									<li class="g-nav__item">
 										<a href="#" class="g-nav__ln">Элемент_1</a>
 									</li>
