--- a/blocks/forms/default.html
+++ b/blocks/forms/default.html
@@ -30,77 +30,97 @@
 				<div class="region-main i-clfx" role="main">
 					<div class="region-main__content">
 						<h1>Заголовок 1</h1>
-						<form class="form form_name" action="post" method="get" accept-charset="utf-8">
-							<div class="form__row">
-								<label for="form_name-uname">User name</label>
-								<input type="text" id="form_name-uname" name="form_name-uname" />
-							</div>
-							<div class="form__row">
-								<label for="form_name-umail">User mail</label>
-								<input type="text" id="form_name-umail" name="form_name-umail" />
-							</div>
-							<div class="form__row">
-								<label for="form_name-ucomment">User comment</label>
-								<textarea id="form_name-ucomment" name="form_name-ucomment" rows="5"></textarea>
-							</div>
-							<div class="form__row form__row_r">
-								<input type="submit" id="form_name-submit-btn" value="Отправить" />
-							</div>
+						<form class="form form_name" action="form" method="get" accept-charset="utf-8">
+							<fieldset class="form__set form__set_main">
+								<legend class="form__set__legend form__set__legend_main">
+									<span>Auth form</span>
+								</legend>
+								<div class="form__row">
+									<label for="form_name-uname">User name</label>
+									<input type="text" id="form_name-uname" name="form_name-uname" />
+								</div>
+								<div class="form__row">
+									<label for="form_name-umail">User mail</label>
+									<input type="text" id="form_name-umail" name="form_name-umail" />
+								</div>
+								<div class="form__row">
+									<label for="form_name-ucomment">User comment</label>
+									<textarea id="form_name-ucomment" name="form_name-ucomment" rows="5"></textarea>
+								</div>
+								<div class="form__row form__row_r">
+									<input type="submit" id="form_name-submit-btn" value="Отправить" />
+								</div>
+							</fieldset>
 						</form>
-						<form class="form form_horiz form_name2 custom" action="post" method="get" accept-charset="utf-8">
-							<div class="form__row">
-								<div class="form__item form__item_w100">
-									<label for="form_name2-uname">User name</label>
+						<form class="form form_horiz form_name2 custom" action="form" method="get" accept-charset="utf-8">
+							<fieldset class="form__set form__set_main">
+								<legend class="form__set__legend form__set__legend_main">
+									<span>Feedback</span>
+								</legend>
+								<fieldset class="form__set">
+									<legend class="i-wai">
+										Personal data
+									</legend>
+									<div class="form__row">
+										<div class="form__item form__item_w100">
+											<label for="form_name2-uname">User name</label>
+										</div>
+										<div class="form__item form__item_w200">
+											<input type="text" id="form_name2-uname" name="form_name-uname" />
+										</div>
+									</div>
+									<div class="form__row">
+										<div class="form__item form__item_w100">
+											<label for="form_name2-umail">User mail</label>
+										</div>
+										<div class="form__item form__item_w200">
+											<input type="text" id="form_name2-umail" name="form_name-umail" />
+										</div>
+									</div>
+									<div class="form__row">
+										<div class="form__item form__item_w100">
+											<label for="form_name2-utel-tel">User tel</label>
+										</div>
+										<div class="form__item form__item_w50">
+											<input type="text" id="form_name2-utel-code" name="form_name2-utel-code" />
+										</div>
+										<div class="form__item form__item_w145">
+											<input type="text" id="form_name2-utel-tel" name="form_name-utel-tel" />
+										</div>
+									</div>
+								</fieldset>
+								<fieldset class="form__set">
+									<legend class="form__set__legend">
+										<span>Message</span>
+									</legend>
+									<div class="form__row">
+										<div class="form__item form__item_w100">
+											<label for="form_name2-utheme">Message theme</label>
+										</div>
+										<div class="form__item form__item_w200 sb-w200">
+											<select id="form_name2-utheme" name="form_name2-utheme">
+												<option selected="selected" value="sm1">Выбор 1</option>
+												<option value="sm2">Выбор 2</option>
+												<option value="sm3">Длинный длинный длинный выбор</option>
+												<option value="sm4">Выбор 4</option>
+												<option value="sm5">Выбор 5</option>
+												<option value="sm6">выбор 5</option>
+											</select>
+										</div>
+									</div>
+									<div class="form__row">
+										<div class="form__item form__item_w100">
+											<label for="form_name2-ucomment">User comment</label>
+										</div>
+										<div class="form__item form__item_w200">
+											<textarea id="form_name2-ucomment" name="form_name2-ucomment" rows="5"></textarea>
+										</div>
+									</div>
+								</fieldset>
+								<div class="form__row form__row_c">
+									<input type="submit" id="form_name2-submit-btn" value="Отправить" />
 								</div>
-								<div class="form__item form__item_w200">
-									<input type="text" id="form_name2-uname" name="form_name-uname" />
-								</div>
-							</div>
-							<div class="form__row">
-								<div class="form__item form__item_w100">
-									<label for="form_name2-umail">User mail</label>
-								</div>
-								<div class="form__item form__item_w200">
-									<input type="text" id="form_name2-umail" name="form_name-umail" />
-								</div>
-							</div>
-							<div class="form__row">
-								<div class="form__item form__item_w100">
-									<label for="form_name2-utel-tel">User tel</label>
-								</div>
-								<div class="form__item form__item_w50">
-									<input type="text" id="form_name2-utel-code" name="form_name2-utel-code" />
-								</div>
-								<div class="form__item form__item_w145">
-									<input type="text" id="form_name2-utel-tel" name="form_name-utel-tel" />
-								</div>
-							</div>
-							<div class="form__row">
-								<div class="form__item form__item_w100">
-									<label for="form_name2-utheme">Message theme</label>
-								</div>
-								<div class="form__item form__item_w200 sb-w200">
-									<select id="form_name2-utheme" name="form_name2-utheme">
-										<option selected="selected" value="sm1">Выбор 1</option>
-										<option value="sm2">Выбор 2</option>
-										<option value="sm3">Длинный длинный длинный выбор</option>
-										<option value="sm4">Выбор 4</option>
-										<option value="sm5">Выбор 5</option>
-										<option value="sm6">выбор 5</option>
-									</select>
-								</div>
-							</div>
-							<div class="form__row">
-								<div class="form__item form__item_w100">
-									<label for="form_name2-ucomment">User comment</label>
-								</div>
-								<div class="form__item form__item_w200">
-									<textarea id="form_name2-ucomment" name="form_name2-ucomment" rows="5"></textarea>
-								</div>
-							</div>
-							<div class="form__row form__row_c">
-								<input type="submit" id="form_name2-submit-btn" value="Отправить" />
-							</div>
+							</fieldset>
 						</form>
 					</div>
 					<!-- /.region-main__content -->
