table scope added

--- a/blocks/forms/default.html
+++ b/blocks/forms/default.html
@@ -47,6 +47,35 @@
 									<label for="form_name-ucomment">User comment</label>
 									<textarea id="form_name-ucomment" name="form_name-ucomment" rows="5"></textarea>
 								</div>
+								<div class="form__row">
+									<label>
+										<input type="radio" name="radio1" value="r1" checked="checked"/>
+										Radio (checked)
+									</label>
+									<label>
+										<input type="radio" name="radio1" value="r2" disabled="disabled"/>
+										Radio 2 (disabled)
+									</label>
+									<label>
+										<input type="radio" name="radio1" value="r3"/>
+										Radio 3
+									</label>
+								</div>
+								<div class="form__row">
+									Checkbox
+									<label>
+										<input type="checkbox" name="checkbox1" value="ch1" checked="checked"/>
+										Check 1 (checked)
+									</label>
+									<label>
+										<input type="checkbox" name="checkbox2" value="ch2" disabled="disabled"/>
+										Check 2 (disabled)
+									</label>
+									<label>
+										<input type="checkbox" name="checkbox3" value="ch3"/>
+										Check 3
+									</label>
+								</div>
 								<div class="form__row form__row_r">
 									<input type="submit" id="form_name-submit-btn" value="Отправить" />
 								</div>
