--- a/blocks/modal/default.html
+++ b/blocks/modal/default.html
@@ -103,7 +103,7 @@
 				<div class="modal__window__inner">
 					<div class="modal__content">
 					</div>
-					<span class="modal__close-btn js-modal-close" role="button" title="Закрыть окно">×</span>
+					<span class="modal__close-btn js-modal-close" role="button" title="Закрыть окно" tabindex="0">×</span>
 				</div>
 			</div>
 		</div>
