bradcrumbs styles added

--- a/check.html
+++ b/check.html
@@ -110,7 +110,7 @@
 								<li>
 									<a href="#" itemprop="url"><span itemprop="title">Главная</span></a> →
 								</li>
-								<li>
+								<li class="list">
 									Typography
 								</li>
 							</ol>
