--- a/blocks/forms/default.html
+++ b/blocks/forms/default.html
@@ -30,7 +30,7 @@
 				<div class="region-main i-clfx" role="main">
 					<div class="region-main__content">
 						<h1>Заголовок 1</h1>
-						<form class="form form_name" action="form" method="get" accept-charset="utf-8">
+						<form class="form form_vert form_name" action="form" method="get" accept-charset="utf-8">
 							<fieldset class="form__set form__set_main">
 								<legend class="form__set__legend form__set__legend_main">
 									<span>Auth form</span>
@@ -48,39 +48,11 @@
 									<textarea id="form_name-ucomment" name="form_name-ucomment" rows="5"></textarea>
 								</div>
 								<div class="form__row">
-									<label>
-										<input type="radio" name="radio1" value="r1" checked="checked"/>
-										Radio (checked)
-									</label>
-									<label>
-										<input type="radio" name="radio1" value="r2" disabled="disabled"/>
-										Radio 2 (disabled)
-									</label>
-									<label>
-										<input type="radio" name="radio1" value="r3"/>
-										Radio 3
-									</label>
-								</div>
-								<div class="form__row">
-									Checkbox
-									<label>
-										<input type="checkbox" name="checkbox1" value="ch1" checked="checked"/>
-										Check 1 (checked)
-									</label>
-									<label>
-										<input type="checkbox" name="checkbox2" value="ch2" disabled="disabled"/>
-										Check 2 (disabled)
-									</label>
-									<label>
-										<input type="checkbox" name="checkbox3" value="ch3"/>
-										Check 3
-									</label>
-								</div>
-								<div class="form__row form__row_r">
 									<input type="submit" id="form_name-submit-btn" value="Отправить" />
 								</div>
 							</fieldset>
 						</form>
+						<hr />
 						<form class="form form_horiz form_name2 custom" action="form" method="get" accept-charset="utf-8">
 							<fieldset class="form__set form__set_main">
 								<legend class="form__set__legend form__set__legend_main">
@@ -148,6 +120,120 @@
 								</fieldset>
 								<div class="form__row form__row_c">
 									<input type="submit" id="form_name2-submit-btn" value="Отправить" />
+								</div>
+							</fieldset>
+						</form>
+						<hr />
+						<form class="form form_vert form_name3 custom" action="form" method="get" accept-charset="utf-8">
+							<fieldset class="form__set form__set_main">
+								<legend class="form__set__legend form__set__legend_main">
+									<span>Radio & Check boxes</span>
+								</legend>
+								<fieldset class="form__set">
+									<legend class="form__set__legend">
+										<span>Radio</span>
+									</legend>
+									<div class="form__row">
+										<label>
+											<input type="radio" name="radio1" value="r1" checked="checked"/>
+											Radio (checked)
+										</label>
+										<label>
+											<input type="radio" name="radio1" value="r2" disabled="disabled"/>
+											Radio 2 (disabled)
+										</label>
+										<label>
+											<input type="radio" name="radio1" value="r3"/>
+											Radio 3
+										</label>
+									</div>
+								</fieldset>
+								<fieldset class="form__set">
+									<legend class="form__set__legend">
+										<span>Check box</span>
+									</legend>
+									<div class="form__row">
+										<label>
+											<input type="checkbox" name="checkbox1" value="ch1" checked="checked"/>
+											Check 1 (checked)
+										</label>
+										<label>
+											<input type="checkbox" name="checkbox2" value="ch2" disabled="disabled"/>
+											Check 2 (disabled)
+										</label>
+										<label>
+											<input type="checkbox" name="checkbox3" value="ch3"/>
+											Check 3
+										</label>
+									</div>
+								</fieldset>
+								<div class="form__row">
+									<input type="submit" id="form_name3-submit-btn" value="Отправить" />
+								</div>
+							</fieldset>
+						</form>
+						<hr />
+						<form class="form form_vert form_name4" id="form_name4" action="form" method="get" accept-charset="utf-8">
+							<fieldset class="form__set form__set_main">
+								<legend class="form__set__legend form__set__legend_main">
+									<span>Other form elements</span>
+								</legend>
+								<fieldset class="form__set">
+									<legend class="form__set__legend">
+										<span>Password search</span>
+									</legend>
+									<div class="form__row">
+										<input type="search" placeholder="search" autofocus />
+									</div>
+									<div class="form__row">
+										<input type="password" name="password" placeholder="password" required="required"/>
+									</div>
+									<div class="form__row">
+										<input type="file">
+									</div>
+								</fieldset>
+								<fieldset class="form__set">
+									<legend class="form__set__legend">
+										<span>Check box</span>
+									</legend>
+									<div class="form__row">
+										<label for="select">Раскрывающийся список с группами</label>
+										<select name="select" id="select">
+											<optgroup label="Группа 1">
+												<option value="c1">Выбор 1</option>
+												<option value="c2">Выбор 2</option>
+												<option value="c3">Длинный длинный длинный выбор</option>
+											</optgroup>
+											<optgroup label="Группа 2">
+												<option value="s1">Выбор 4</option>
+												<option value="s2">Выбор 5</option>
+												<option value="s3">выбор 5</option>
+											</optgroup>
+										</select>
+									</div>
+									<div class="form__row">
+										<label for="select-openend">Список множественного выбора</label>
+										<select name="select-openend" id="select-openend" multiple="multiple" size="4">
+											<option selected="selected" value="sm1">Выбор 1</option>
+											<option value="sm2">Выбор 2</option>
+											<option value="sm3">Длинный длинный длинный выбор</option>
+											<option value="sm4">Выбор 4</option>
+											<option value="sm5">Выбор 5</option>
+											<option value="sm6">выбор 5</option>
+										</select>
+									</div>
+								</fieldset>
+								<div class="form__row">
+									<input type="button" value="Button"/>
+								</div>
+								<div class="form__row">
+									<input type="image" value="Button"/>
+								</div>
+								<div class="form__row">
+									<input type="reset" value="Reset"/>
+								</div>
+								<div class="form__row">
+									<button type="submit" form="form_name4">Button</button>
 								</div>
 							</fieldset>
 						</form>
